# CodexPlusPlus

./: .gitattributes  Cargo.toml  README.md
.github/workflows/: pr-build.yml  release-assets.yml
apps/codex-plus-launcher/: Cargo.toml  build.rs
apps/codex-plus-launcher/src/: main.rs
apps/codex-plus-manager/: package.json
apps/codex-plus-manager/src/: App.tsx  styles.css
apps/codex-plus-manager/src-tauri/: build.rs  tauri.conf.json
apps/codex-plus-manager/src-tauri/src/: commands.rs  lib.rs
assets/inject/: renderer-inject.js
codex_session_delete/: markdown_exporter.py
codex_session_delete/inject/: renderer-inject.js
crates/codex-plus-core/: Cargo.toml  build.rs
crates/codex-plus-core/src/: launcher.rs  lib.rs  models.rs  protocol_proxy.rs  relay_config.rs  routes.rs  screenshot.rs  settings.rs  update.rs  version.rs  windows_integration.rs
crates/codex-plus-core/tests/: bridge_routes.rs  cdp_bridge.rs  launcher.rs  updater.rs  watcher.rs
native/flameshot-embedded/: CMakeLists.txt  README.md  codex_flameshot_bridge.cpp  codex_flameshot_bridge.h
patches/flameshot/: embedded-reset-capture-window.patch
scripts/installer/macos/: package-dmg.sh
scripts/installer/windows/: CodexPlusPlus.nsi  stage-embedded-flameshot.ps1
tests/: test_markdown_exporter.py
